--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -31,7 +31,7 @@
     margin-top: 1rem;
     margin-bottom: 1rem;
     border: 0;
-    width: 50%;
+    width: 100%;
     border-top: 2px solid rgba(255, 255, 255, 0.1);
   }
 }
@@ -43,7 +43,6 @@
 
   a {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     color: $white-color;
     font-size: 3rem;
@@ -54,6 +53,9 @@
 
     &:hover {
       transform: translateY(-2px);
+    }
+    .social-icon {
+      fill: #fff;
     }
   }
 }
