--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,13 +1,17 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #ca4c62;
+$secondary-color: #ff505e;
+
+// $primary-color: #02aab0;
+// $secondary-color: #00cdac;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
 
 $white-color: #fff;
 
-$dark-grey: #333333;
+// $dark-grey: #333333;
+$dark-grey: #1c1d22;
 
 $dark-blue-text: #272341; // For Headings
 
