--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -4,9 +4,10 @@
   display: flex;
   align-items: center;
   border-bottom: 0px;
-  background: $white-color;
+  // background: $white-color;
   font-weight: 400;
-  color: $dark-blue-text;
+  // color: $dark-blue-text;
+  color: $white-color;
   padding: 0rem 5.6rem;
   margin-bottom: 0;
   top: 0;
