--- a/src/style/sections/_topnav.scss
+++ b/src/style/sections/_topnav.scss
@@ -9,6 +9,9 @@
         width: 140px;
         height: 50px;
         text-align: center;
+        a {
+          color: #777;
+        }
     }
   }
 }
